--- a/vms/swarm_managers/Vagrantfile
+++ b/vms/swarm_managers/Vagrantfile
@@ -1,20 +1,20 @@
 Vagrant.configure("2") do |config|
   
-  config.vm.provision "shell", path: "docker_provisioning.sh"
+  config.vm.provision "shell", path: "provisioning.sh"
 
-  config.vm.define "manager1" do |manager1|
-    manager1.vm.box = "centos/7"
-    manager1.vm.network "private_network", type: "dhcp"
+  config.vm.define "manager1" do |config|
+    config.vm.box = "ubuntu/trusty64"
+    config.vm.network "public_network", ip: "192.168.20.101", bridge: "ens3"
   end
 
-  config.vm.define "manager2" do |manager2|
-    manager2.vm.box = "centos/7"
-    manager2.vm.network "private_network", type: "dhcp"
+  config.vm.define "manager2" do |config|
+    config.vm.box = "ubuntu/trusty64"
+    config.vm.network "public_network", ip: "192.168.20.102", bridge: "ens3"
   end
 
-  config.vm.define "manager3" do |manager3|
-    manager3.vm.box = "centos/7"
-     manager3.vm.network "private_network", type: "dhcp"
+  config.vm.define "manager3" do |config|
+    config.vm.box = "ubuntu/trusty64"
+    config.vm.network "public_network", ip: "192.168.20.103", bridge: "ens3"
   end
 
 end
