--- a/vms/swarm_managers/Vagrantfile
+++ b/vms/swarm_managers/Vagrantfile
@@ -1,20 +1,38 @@
+# @TODO: configure managers with loop
+
+NETWORK_BRIDGE = "ens3"
+
 Vagrant.configure("2") do |config|
   
-  config.vm.provision "shell", path: "provisioning.sh"
-
   config.vm.define "manager1" do |config|
     config.vm.box = "ubuntu/trusty64"
-    config.vm.network "public_network", ip: "192.168.20.101", bridge: "ens3"
+    config.vm.hostname = "manager1"
+    config.vm.network "private_network", ip: "192.168.99.201"
+    config.vm.provision "shell", path: "manager_provisioning.sh"
   end
 
   config.vm.define "manager2" do |config|
     config.vm.box = "ubuntu/trusty64"
-    config.vm.network "public_network", ip: "192.168.20.102", bridge: "ens3"
+    config.vm.hostname = "manager2"
+    config.vm.network "private_network", ip: "192.168.99.202"
+    config.vm.provision "shell", path: "manager_provisioning.sh"
   end
 
   config.vm.define "manager3" do |config|
     config.vm.box = "ubuntu/trusty64"
-    config.vm.network "public_network", ip: "192.168.20.103", bridge: "ens3"
+    config.vm.hostname = "manager3"
+    config.vm.network "private_network", ip: "192.168.99.203"
+    config.vm.provision "shell", path: "manager_provisioning.sh"
+  end
+
+  config.vm.define "loadBalancer" do |config|
+    config.vm.box = "ubuntu/trusty64"
+    config.vm.hostname = "loadBalancer"
+    config.vm.network "private_network", ip: "192.168.99.200", bridge: NETWORK_BRIDGE
+    config.vm.network :forwarded_port, guest: 80, host: 8888
+    config.vm.network :forwarded_port, guest: 81, host: 8889
+    config.vm.provision "shell", path: "loadBalancer_provisioning.sh"
+    config.vm.provision "shell", path: "loadBalancer_iptables.sh"
   end
 
 end
